@@ -1,6 +1,8 @@
 ViTables ChangeLog
 ==================
 ** January 20, 2011 **
+Applied a workaround to a PyQt4 4.8.2 bug.
+
 Fixed some minor bugs regarding plugins.
 
 ** January 18, 2011 **
